--- a/style.css
+++ b/style.css
@@ -5,6 +5,10 @@
     box-sizing: border-box;
 }
 
+html {
+    scroll-behavior: smooth;
+}
+
 body {
     background: #222f3e;
     color: #fff;
@@ -19,6 +23,7 @@ body {
     background-size: contain;
     background-position: right;
     background-repeat: no-repeat;
+    background-attachment: fixed;
 }
 
 .container {
@@ -370,3 +375,93 @@ form .btn2 {
 .copyright i {
     color: #48dbfb;
 }
+
+/* ---------- Css for small screen ---------- */
+nav .fa-solid {
+    display: none;
+}
+
+@media only screen and (max-width: 600px) {
+    #header {
+        background-image: url(./images/background-mobile.png);
+        margin-top: 0;
+        background-position: bottom;
+    }
+
+    .header-text {
+        /* margin-top: 100%; */
+        font-size: 16px;
+    }
+
+    .header-text h1 {
+        font-size: 30px;
+    }
+
+    nav .fa-solid {
+        display: block;
+        font-size: 25px;
+    }
+
+    nav ul {
+        background: #48dbfb;
+        position: fixed;
+        top: 0;
+        right: -200px;
+        width: 200px;
+        height: 100vh;
+        padding-top: 50px;
+        z-index: 2;
+        transition: right 0.5s;
+    }
+
+    nav ul {
+        flex-direction: column;
+        gap: 0;
+    }
+
+    nav ul li {
+        margin: 25px;
+    }
+
+    nav ul .fa-solid {
+        position: absolute;
+        top: 25px;
+        left: 25px;
+        cursor: pointer;
+    }
+
+    .sub-title {
+        font-size: 40px;
+    }
+
+    .about-col-1, .about-col-2 {
+        flex-basis: 100%;
+    }
+
+    .about-col-1 {
+        margin-bottom: 30px;
+    }
+
+    .about-col-2 {
+        font-size: 14px;
+    }
+
+    .tab-links {
+        font-size: 16px;
+        margin-right: 20px;
+    }
+
+    .contact-left, .contact-right {
+        flex-basis: 100%;
+    }
+
+    .copyright {
+        font-size: 14px;
+    }
+} 
+
+
+/* Webkit to hide scrollbar */
+::-webkit-scrollbar {
+    display: none;
+  }
