--- a/style.css
+++ b/style.css
@@ -381,7 +381,7 @@ nav .fa-solid {
     display: none;
 }
 
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 700px) {
     #header {
         background-image: url(./images/background-mobile.png);
         margin-top: 0;
@@ -458,7 +458,18 @@ nav .fa-solid {
     .copyright {
         font-size: 14px;
     }
+
+    .fa-bars {
+        cursor: pointer;
+    }
 } 
+
+@media(max-width: 1300px) {
+    .germany::before {
+        content: "\a";
+        white-space: pre;
+    }
+}
 
 #msg {
     color: #48dbfb;
